# workflows_with_litellm_pub

./: .env.example  .gitignore  README.md  app.py  app_web.py  pyproject.toml
config/: correct_and_blog.yaml  correct_audio_transcription.yaml  expand_draft_note_config.yaml  literature_review_exa.yaml  literature_review_exa_config.yaml  polish_cn_audio_transcription_config.yaml  search_and_blog.yaml  search_and_blog_config.yaml  translation_to_cn_config.yaml  translation_to_eng_config.yaml
memory/: blog_example.md  cn_paper_example.md  vocab.md
patterns/academic_fill_outline_with_material/: system.md
patterns/academic_outliner/: system.md
patterns/comment_cn_audio_transcription/: system.md
patterns/comment_cn_draft/: system.md
patterns/comment_cn_trans/: system.md
patterns/comment_en_trans/: system.md
patterns/convert_to_wsy_lang_style/: system.md
patterns/correct_cn_audio_transcription/: system.md
patterns/extract_modification/: system.md
patterns/extract_wisdom_cn/: system.md
patterns/fenduan/: system.md
patterns/fill_draft_with_material/: system.md
patterns/improve_md_writing_based_comments_wsy_cn/: system.md
patterns/improve_transcription_wsy_cn/: system.md
patterns/improved_trans_cn/: system.md
patterns/improved_trans_en/: system.md
patterns/judou/: system.md
patterns/literature_review_exa/: system.md
patterns/outliner_wsy/: system.md
patterns/stylize_blog/: system.md
patterns/summarize_paper_cn/: system.md
patterns/translate_cn/: system.md
patterns/translate_en/: system.md
patterns/write_wsy_tech_blog/: system.md
